apps/headlamp/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Headlamp
    gethomepage.dev/group: Cluster Management
    gethomepage.dev/icon: headlamp.png
    gethomepage.dev/widget.url: "https://headlamp.alixroden.co.uk"
    gethomepage.dev/pod-selector: ""
    gethomepage.dev/widget-type: ""
    gethomepage.dev/description: "Headlamp Kubernetes Dashboard"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: web
      namespace: infra
      sectionName: websecure-gw
  hostnames:
    - "headlamp.alixroden.co.uk"
  rules:
    - backendRefs:
        - name: headlamp
          port: 80
