apps/headlamp/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: headlamp
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: traefik.alixroden.co.uk
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`headlamp.alixroden.co.uk`)
      kind: Rule
      services:
        - kind: Service
          name: headlamp
          port: 4466
      middlewares:
        - name: traefik-forward-auth
          namespace: traefik
  ingressClassName: traefik
  tls:
    secretName: alixroden-co-uk-tls
